infra/kubernetes/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: proyecto-ml
  labels:
    app.kubernetes.io/part-of: proyecto-ml
    app.kubernetes.io/component: web
    app.kubernetes.io/name: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
    color: blue           # <- traffic switch lives here
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: web-blue
  namespace: proyecto-ml
  labels:
    app.kubernetes.io/part-of: proyecto-ml
    app.kubernetes.io/component: web
    color: blue
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
    color: blue
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: web-green
  namespace: proyecto-ml
  labels:
    app.kubernetes.io/part-of: proyecto-ml
    app.kubernetes.io/component: web
    color: green
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
    color: green
  ports:
    - name: http
      port: 80
      targetPort: http
